I added pseudocode notes and broke down the game in different steps. I also added some variables for each step

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 
 	<div id="game">
 	      <p> Press any key to get started! </p>
-	      <p>Current Word: <span id="currentWord"></span></p>
-	      <p>Number of guesses remaining: <span id="guessRemain"></span></p>
-	      <p>Letters already guessed: <span id="lettGuess"></span></p>
+	      <br>
+	      <p> <span id="lettersArray"></span></p>
+	      <p>Number of guesses remaining: <span id="remainTries"></span></p>
+	      <p>Number of letters remaining to be guessed: <span id="remainLetters"></span></p>
+	      <p>Letters guessed incorrectly: <span id="wrongGuessArray"></span></p>
+	      <br>
 	      <p>Number of wins: <span id="numWins"></span></p>
+	      <p>Number of losses: <span id="numLosses"></span></p>
 	      <p>Reset: <span id="reset"></span></p>
 	</div>
 
