I have the array of correct letters guessed and incorrect letters guessed adding letters. Also, I have the number of remaining tries decreasing as the player presses a key. Finally have an array of underscores getting created the same length of the random word generated

--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
 	</header>
 
 	<div id="game">
-	      <p> Press any key to get started! </p>
+	      <p> Hangman: </p>
 	      <br>
-	      <p> <span id="lettersArray"></span></p>
+	      <p> <span id="test"></span></p>
+
+	      <p> <span id="answerArray"></span></p>
 	      <p>Number of guesses remaining: <span id="remainTries"></span></p>
-	      <p>Number of letters remaining to be guessed: <span id="remainLetters"></span></p>
-	      <p>Letters guessed incorrectly: <span id="wrongGuessArray"></span></p>
 	      <br>
+	      <p>Letters guessed correctly: <span id="rightGuessArray"></span></p>
+  	      <p>Letters guessed incorrectly: <span id="wrongGuessArray"></span></p>
+	      <br>
+	      <p>Game outcome <span id="outcome"></span></p>
 	      <p>Number of wins: <span id="numWins"></span></p>
 	      <p>Number of losses: <span id="numLosses"></span></p>
+
+
 	      <p>Reset: <span id="reset"></span></p>
 	</div>
 
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
+
 </body>
 
-	<script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </html>
