I converted the answerArray into a string in order to compare it to the randomWord generated to see if the player had won

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	</header>
 
 	<div id="game">
-	      <p> Hangman: </p>
+	      <p> Hangman:</p>
 	      <br>
+	      <p>Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease.</p>
 	      <p> <span id="test"></span></p>
 
 	      <p> <span id="answerArray"></span></p>
