--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 		<div class="mainContent">
 	      <p class="instructions">How to play: Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease.</p> <br>
 	      <p>Theme: Professions</p>
-	      <p> <span id="answerArray"></span></p>
-	      <p>Number of guesses remaining: <span id="remainTries"></span></p>
+	      <p> <span id="answerContent"></span></p>
+	      <p>Number of guesses remaining: <span id="remainTriesContent"></span></p>
 	      <br>
-	      <p>Letters guessed correctly: <span id="rightGuessArray"></span></p>
-  	      <p>Letters guessed incorrectly: <span id="wrongGuessArray"></span></p>
+	      <p>Letters guessed correctly: <span id="rightGuessContent"></span></p>
+  	      <p>Letters guessed incorrectly: <span id="wrongGuessContent"></span></p>
   	    </div>
 
   	    <div class="score">
 	      <br>
-	      <p>Game outcome <span id="outcome"></span></p>
-	      <p>Number of wins: <span id="numWins"></span></p>
-	      <p>Number of losses: <span id="numLosses"></span></p>
+	      <p>Game outcome <span id="outcomeContent"></span></p>
+	      <p>Number of wins: <span id="numWinsContent"></span></p>
+	      <p>Number of losses: <span id="numLossesContent"></span></p>
 		</div>
 
 		<div class="clearfix">
