finished most of the game now have to work on how to start a new game now that I have included the resets.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="game">
 
 		<div class="mainContent">
-	      <p class="instructions">How to play: Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease.</p> <br>
+	      <p class="instructions">How to play: Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</p>
 	      <p>Theme: Professions</p>
 	      <p> <span id="answerContent"></span></p>
 	      <p>Number of guesses remaining: <span id="remainTriesContent"></span></p>
