--- a/index.html
+++ b/index.html
@@ -4,55 +4,49 @@
     <meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<title></title>
+	<title>Hangman Game</title>
 
 </head>
 <body>
-	<header>
-		<p> Lets play Hangman!</p>
-	</header>
-
-	<div class="clearfix">
-	</div>
-
-	<div id="game">
-
-		<div class="mainContent">
-	      <p class="instructions">How to play: Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</p>
-	      <p>Theme: Professions</p>
-	      <p> <span id="answerContent"></span></p>
-	      <p>Number of guesses remaining: <span id="remainTriesContent"></span></p>
-	      <br>
-	      <p>Letters guessed correctly: <span id="rightGuessContent"></span></p>
-  	      <p>Letters guessed incorrectly: <span id="wrongGuessContent"></span></p>
-  	    </div>
-
-  	    <div class="score">
-	      <br>
-	      <p>Game outcome <span id="outcomeContent"></span></p>
-	      <p>Number of wins: <span id="numWinsContent"></span></p>
-	      <p>Number of losses: <span id="numLossesContent"></span></p>
-		</div>
-
-		<div class="clearfix">
-		</div>
-
-		<div class="button">
-	      <p>Reset: <span id="reset"></span></p>
-	     </div>
-
-	    <div class="clearfix">
-		</div>
-
+	<div class="container">
+		<header>
+			<div class="headerContainer">
+				<h1> Lets play Hangman!</h1>
+			</div>
+		</header>
+		<main>
+			<div class="contentContainer">
+				<div class="topSection">
+					<div class="description">
+						<h2>How to play: Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</h2>
+						<h3>Theme: Professions</h3>
+					</div>
+				</div>
+				<div class="middleSection">
+					<div class="wordGenerated">
+						<p> <span id="answerContent"></span></p>
+					</div>
+					<div class="playerInputs">
+						<p>Letters guessed correctly: <span id="rightGuessContent"></span></p>
+	  	     			<p>Letters guessed incorrectly: <span id="wrongGuessContent"></span></p>
+					</div>
+				</div>			
+				<div class="bottomSection">
+					<div class="scores">
+						<p>Number of guesses remaining: <span id="remainTriesContent"></span></p>
+		      			<p class=".col-sm-6 .col-md-5 .col-lg-6">Game outcome <span id="outcomeContent"></span></p>
+		      			<p>Number of wins: <span id="numWinsContent"></span></p>
+		      			<p>Number of losses: <span id="numLossesContent"></span></p>
+					</div>
+				</div>
+			</div>
+		</main>
 	    <footer>
-			<p> Mayra Jaimes </p>
+			<p>&copy; Copyright 2017 Mayra Jaimes</p> 
 	    </footer>
 	</div>
-
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
-
 </body>
-
-
 </html>
