made my javascript object oriented

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="contentContainer">
 				<div class="topSection">
 					<div class="description">
-						<p>Theme: Professions</p>
+						<p>Theme: Sports</p>
 					</div>
 					<div class="wordGenerated">
 						<p> <span id="answerContent"></span></p>
@@ -30,7 +30,7 @@
 				<div class="middleSection">
 					<div class="row playerInputs">
 						<div class="col-md-6">
-							<div class="panel panel-danger">
+							<div class="panel panel-success">
 							  <div class="panel-heading">
 							    <h3 class="panel-title">Letters guessed correctly</h3>
 							  </div>
@@ -50,40 +50,28 @@
 							</div>
 						</div>
 					</div>
-				</div>			
+				</div>	
 				<div class="row bottomSection">
 					<div class="col-md-4">
-						<div class="panel panel-info">
-							<div class="panel-heading">
-							    <h3 class="panel-title">Number of guesses remaining</h3>
-							</div>
-							<div id="remainTriesContent" class="panel-body">
-							  	10
-							</div>
-						</div>
+						<button class="btn btn-warning" type="button">
+	  					<p> Number of guesses remaining <span id= "remainTriesContent" class="badge"> 10 </span> </p>
+						</button>
 					</div>
 					<div class="col-md-4">
-						<div class="panel panel-info">
-						  <div class="panel-heading">
-						    <h3 class="panel-title">Number of wins</h3>
-						  </div>
-						  <div id="numWinsContent" class="panel-body">
-						  </div>
-						</div>
+						<button class="btn btn-success" type="button">
+	  					<p> Number of Wins <span id= "numWinsContent" class="badge"> o </span> </p>
+						</button>
 					</div>
+
 					<div class="col-md-4">
-						<div class="panel panel-info">
-						  <div class="panel-heading">
-						    <h3 class="panel-title">Number of losses</h3>
-						  </div>
-						  <div id="numLossesContent" class="panel-body">
-						  </div>
-						</div>
+						<button class="btn btn-danger" type="button">
+	  					<p> Number of Losses <span id="numLossesContent" class="badge"> o </span> </p>
+						</button>
 					</div>
 				</div>
 				<div class="row results">
 					<div class="col-md-12">
-						<div class="panel panel-success">
+						<div class="panel panel-info">
 						  <div class="panel-heading">
 						    <h3 class="panel-title">Game outcome</h3>
 						  </div>
