added more styles to my page and changed the order of some elements. I also added another if statement in my javascript so that the user cannot press the same letter more than once

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 			</div>
 		</header>
 		<main>
+			<div class="row results">
+				<div class="col-md-12">
+					<div class="panel panel-info">
+					  <div class="panel-heading">
+					    <h3 class="panel-title">Game outcome</h3>
+					  </div>
+					  <div id="outcomeContent" class="panel-body">
+					  </div>
+					</div>
+				</div>
+			</div>
 			<div class="contentContainer">
 				<div class="topSection">
 					<div class="description">
@@ -54,7 +65,7 @@
 				<div class="row bottomSection">
 					<div class="col-md-4">
 						<button class="btn btn-warning" type="button">
-	  					<p> Number of guesses remaining <span id= "remainTriesContent" class="badge"> 10 </span> </p>
+	  					<p> Guesses remaining <span id= "remainTriesContent" class="badge"> 10 </span> </p>
 						</button>
 					</div>
 					<div class="col-md-4">
@@ -69,21 +80,10 @@
 						</button>
 					</div>
 				</div>
-				<div class="row results">
-					<div class="col-md-12">
-						<div class="panel panel-info">
-						  <div class="panel-heading">
-						    <h3 class="panel-title">Game outcome</h3>
-						  </div>
-						  <div id="outcomeContent" class="panel-body">
-						  </div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</main>
 	    <footer>
-			<p>&copy; Copyright 2017 Mayra Jaimes</p> 
+			<p>Copyright &copy; 2017 Mayra Jaimes</p> 
 	    </footer>
 	</div>
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
