--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 					<div class="wordGenerated">
 						<p> <span id="answerContent"></span></p>
 					</div>
+					<div class="image">
+					</div>
 				</div>
 				<div class="middleSection">
 					<div class="row playerInputs">
