Added the hangman picture. As the player guesses an incorrect letter the hangman picture changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div class="wordGenerated">
 						<p> <span id="answerContent"></span></p>
 					</div>
-					<div class="image">
+					<div id="image">
 					</div>
 				</div>
 				<div class="middleSection">
