added boxes around the underscores and the letters in the word by creating divs around each one

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			<div class="headerContainer jumbotron">
 				<h1> Lets play Hangman!</h1>
-				<p>How to play: Guess a letter and press the key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</p>
+				<p>How to play: Guess a letter and press a letter key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</p>
 			</div>
 		</header>
 		<main>
