--- a/index.html
+++ b/index.html
@@ -4,90 +4,45 @@
   <meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<title>Hangman Game</title>
 
 </head>
 <body>
-	<div class="container">
-		<header>
-			<div class="headerContainer jumbotron">
-				<h1> Lets play Hangman!</h1>
-				<p>How to play: Guess a letter and press a letter key on your keyboard to see if you guessed correctly or not. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</p>
-			</div>
-		</header>
-		<main>
-			<div class="row results">
-				<div class="col-md-12">
-					<div class="panel panel-info">
-					  <div class="panel-heading">
-					    <h3 class="panel-title">Game outcome</h3>
-					  </div>
-					  <div id="outcomeContent" class="panel-body">
-					  </div>
-					</div>
-				</div>
-			</div>
-			<div class="contentContainer">
-				<div class="topSection">
-					<div class="description">
-						<p>Theme: Sports</p>
-					</div>
-					<div class="wordGenerated">
-						<p> <span id="answerContent"></span></p>
-					</div>
-					<div id="image">
-					</div>
-				</div>
-				<div class="middleSection">
-					<div class="row playerInputs">
-						<div class="col-md-6">
-							<div class="panel panel-success">
-							  <div class="panel-heading">
-							    <h3 class="panel-title">Letters guessed correctly</h3>
-							  </div>
-							  <div class="panel-body">
-								<p> <span id="rightGuessContent"></span></p>
-							  </div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="panel panel-danger">
-							  <div class="panel-heading">
-							    <h3 class="panel-title">Letters guessed incorrectly</h3>
-							  </div>
-							  <div class="panel-body">
-	  	     					<p><span id="wrongGuessContent"></span></p>
-							  </div>
-							</div>
-						</div>
-					</div>
-				</div>	
-				<div class="row bottomSection">
-					<div class="col-md-4">
-						<button class="btn btn-warning" type="button">
-	  					<p> Guesses remaining <span id= "remainTriesContent" class="badge"> 10 </span> </p>
-						</button>
-					</div>
-					<div class="col-md-4">
-						<button class="btn btn-success" type="button">
-	  					<p> Number of Wins <span id= "numWinsContent" class="badge"> o </span> </p>
-						</button>
-					</div>
 
-					<div class="col-md-4">
-						<button class="btn btn-danger" type="button">
-	  					<p> Number of Losses <span id="numLossesContent" class="badge"> o </span> </p>
-						</button>
-					</div>
-				</div>
-			</div>
-		</main>
-	    <footer>
-			<p>Copyright &copy; 2017 Mayra Jaimes</p> 
-	    </footer>
+	<header>
+		<h1> Lets play Hangman!</h1>
+		<p>Guess a letter and press a letter key on your keyboard to see if you guessed correctly. Everytime you guess incorrectly the number of guesses you can make will decrease. Press any key to get started!</p>
+		<p>Theme: Sports</p>
+	</header>
+
+		<div class="wordGenerated">
+			<p><span id="answerContent"></span></p>
+		</div>
+		<div>
+			<img src="assets/images/img9.jpg" id="image"/>
+		</div>
+
+	<div class= "score">
+		<div>
+			<h3>Letters guessed correctly</h3>
+			<p> <span id="rightGuessContent"></span></p>
+		</div>
+		<div>
+			<p> Number of Losses <span id="numLossesContent"> 0 </span> </p>
+			<p> Number of Wins <span id="numWinsContent"> 0 </span> </p>
+			<p> Guesses remaining <span id= "remainTriesContent"> 10 </span> </p>
+		</div>
+		<div>
+			<h3>Letters guessed incorrectly</h3>
+			<p><span id="wrongGuessContent"></span></p>
+		</div>
 	</div>
+
+	<div class="results">
+		<div id="outcomeContent"> </div>
+	</div>
+		
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
